gke/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    name: node
spec:
  selector:
    matchLabels:
      name: node
  replicas: 1
  template:
    metadata:
      labels:
        app: node
        name: node
    spec:
      containers:
        - name: node
          image: vutruong1998/swarmtest:node
          imagePullPolicy: Always
          ports:
            - name: node
              containerPort: 8085
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: node-svc
  labels:
    name: node-svc
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - port: 80
      name: http
      targetPort: 8085
      protocol: TCP

  selector:
    app: node
