gke/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    name: php
spec:
  selector:
    matchLabels:
      name: php
  replicas: 1
  template:
    metadata:
      labels:
        app: php
        name: php
    spec:
      containers:
        - name: php
          image: vutruong1998/swarmtest:php
          imagePullPolicy: Always
          ports:
            - name: php
              containerPort: 8085
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: php-svc
  labels:
    name: php-svc
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - port: 80
      name: http
      targetPort: 8085
      protocol: TCP

  selector:
    app: php
