gke/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cluster-k8s
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: nginx.pray4mycareer.xyz
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-svc
              port:
                number: 80
        - path: /node
          pathType: Prefix
          backend:
            service:
              name: node-svc
              port:
                number: 80
        - path: /php
          pathType: Prefix
          backend:
            service:
              name: php-svc
              port:
                number: 80
